<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioGroup
            android:id="@+id/cinema_radio_groups"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/cinema_radio_all"
                android:layout_weight="1"
                android:background="#ffe33ee2"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:text="@string/cinema_radio_all" >
            </RadioButton>

            <RadioButton
                android:id="@+id/cinema_radio_select"
                android:layout_weight="1"
                android:background="#ffe453e2"
                android:button="@null"
                android:gravity="center"
                android:text="@string/cinema_radio_select" >
            </RadioButton>

            <RadioButton
                android:id="@+id/cinema_radio_sales"
                android:layout_weight="1"
                android:background="#ff34e5e2"
                android:button="@null"
                android:gravity="center"
                android:text="@string/cinema_radio_sale" >
            </RadioButton>
        </RadioGroup>

        <Button
            android:id="@+id/cinema_radio_fliter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cinema_radio_fliter" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/cinema_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </FrameLayout>

</LinearLayout>